Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11127

autoScroll implementation is wrong

    XMLWordPrintable

Details

    • bc4c5a2d9c5d3841948bc4443f2229d8d6ec0e95

    Description

      Changing autoScroll does not work properly, because the TextInput hscroll is calculated in the paint event and it is relative to previous values. This is very wrong. It makes it impossible to publish the value as a property, makes it not possible to test sensibly, and means that the value does not always update in a single frame.

      The calculation of hscroll should be done when needed (eg. font change, text change, cursor position changed, autoscroll changed), or the feature should just be removed and a simple example provided of how to implement it oneself.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
              wallison Warwick Allison (closed Nokia identity) (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes