Fix autoScroll implementation

The scrolling should not be calculated inside the paint event, this
leads to some incorrect behaviour. It is now calculated separately when
needed.

Patch actually written by Alexis, and I reviewed it.

Task-number: QTBUG-11127
Reviewed-by: Alexis Ménard